--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ Fundamentals of Turbulent Flows
 \begin{figure}
     \centering
     \input{Python/FittingAnemometer_toLatex.pgf}
-    \caption{Calibration f King's Law coefficients $A = \num{8.44e-1}$ \si{V^2}, $B = \num{2.23e-1}$ \si{uSI} and $n=0.458$ with a L2-normalized residual rms $e_{rms} = \num{4.6e-4}$}
+    \caption{Calibration of King's Law coefficients $A = \num{8.44e-1}$ \si{V^2}, $B = \num{2.23e-1}$ \si{uSI} and $n=0.458$ with a L2-normalized residual rms $e_{rms} = \num{4.6e-4}$}
     \label{fig:AnemometerFitting}
 \end{figure}
 
