Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -109,7 +109,16 @@ Fundamentals of Turbulent Flows
     \label{fig:Skewness_Profile}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \begin{tabular}{ll}
+        a. & b. \\
+         \resizebox{0.47\linewidth}{!}{\input{Python/Comparison_PDF_Custom_Hist.pgf}} & \resizebox{0.47\linewidth}{!}{\input{Python/Dimensionnal_PDF.pgf}}
+    \end{tabular}
+    \caption{a. Comparison of custom written PDF function with filtering frequency $f_{LP}^{PDF}/ f_s= \num{5e-2}$ and PDF obtained from histogram function from Numpy library b. PDF displayed for the 3 locations.}
 
+    \label{fig:PDF}
+\end{figure}
 
 
 
