--- a/Python/Comparison_PDF_Custom_Hist.tex
+++ b/Python/Comparison_PDF_Custom_Hist.tex
@@ -1,5 +1,5 @@
 % This file was created by tikzplotlib v0.9.1.
-\begin{tikzpicture}
+\begin{tikzpicture}[width = 10cm]
 
 \definecolor{color0}{rgb}{0.12156862745098,0.466666666666667,0.705882352941177}
 \definecolor{color1}{rgb}{1,0.498039215686275,0.0549019607843137}
