--- a/references.bib
+++ b/references.bib
@@ -19,5 +19,51 @@
 	author = {Pope, S. B. and Pope, Stephen B.},
 	month = aug,
 	year = {2000},
-	keywords = {Science / Mechanics / Fluids, Science / Mechanics / Dynamics, Technology \& Engineering / Mechanical, Science / Mechanics / General, Science / Physics / General, Technology \& Engineering / Engineering (General)}
+	keywords = {Science / Mechanics / Dynamics, Science / Mechanics / Fluids, Science / Mechanics / General, Science / Physics / General, Technology \& Engineering / Engineering (General), Technology \& Engineering / Mechanical}
+}
+
+@misc{ScipySignalFiltfilt,
+	title = {scipy.signal.filtfilt — {SciPy} v0.18.1 {Reference} {Guide}},
+	url = {https://docs.scipy.org/doc/scipy-0.18.1/reference/generated/scipy.signal.filtfilt.html},
+	urldate = {2020-04-15},
+	file = {scipy.signal.filtfilt — SciPy v0.18.1 Reference Guide:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\BXEADFDH\\scipy.signal.filtfilt.html:text/html}
+}
+
+@misc{ScipySignalButter,
+	title = {scipy.signal.butter — {SciPy} v1.4.1 {Reference} {Guide}},
+	url = {https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.butter.html},
+	urldate = {2020-04-15},
+	file = {scipy.signal.butter — SciPy v1.4.1 Reference Guide:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\H4B5F7F9\\scipy.signal.butter.html:text/html}
+}
+
+@article{mathisRelationshipVelocitySkewness2011,
+	title = {The relationship between the velocity skewness and the amplitude modulation of the small scale by the large scale in turbulent boundary layers},
+	volume = {23},
+	issn = {1070-6631},
+	url = {https://aip.scitation.org/doi/10.1063/1.3671738},
+	doi = {10.1063/1.3671738},
+	number = {12},
+	urldate = {2020-04-16},
+	journal = {Physics of Fluids},
+	author = {Mathis, Romain and Marusic, Ivan and Hutchins, Nicholas and Sreenivasan, K. R.},
+	month = dec,
+	year = {2011},
+	pages = {121702},
+	file = {Mathis et al_2011_The relationship between the velocity skewness and the amplitude modulation of.pdf:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\Mathis et al_2011_The relationship between the velocity skewness and the amplitude modulation of.pdf:application/pdf;Snapshot:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\ETXZBV6K\\1.html:text/html}
+}
+
+@article{djenidiSkewnessFlatnessFactors2017,
+	title = {Skewness and flatness factors of the longitudinal velocity derivative in wall-bounded flows},
+	volume = {2},
+	url = {https://link.aps.org/doi/10.1103/PhysRevFluids.2.064608},
+	doi = {10.1103/PhysRevFluids.2.064608},
+	abstract = {Hot-wire measurements are carried out in turbulent boundary layers over smooth and rough walls in order the assess the behavior of the skewness (S) and flatness (F) factors of the longitudinal velocity derivative as y, the distance from the wall, increases. The measurements are complemented by direct numerical simulations of a smooth wall turbulent channel flow. It is observed that, as the distance to the wall increases, S and F vary significantly before approaching a constant in the outer layer of the boundary layer. Further, S and F exhibit a nontrivial dependence on the Taylor microscale Reynolds number (Reλ). For example, in the region below about 0.2δ (δ is the boundary layer thickness) where Reλ varies significantly, S and F strongly vary with Reλ and can be multivalued at a given Reλ. In the outer region, between 0.3δ and 0.6δ, S, F, and Reλ remain approximately constant. The channel flow direct numerical simulation data for S and F exhibit a similar behavior. These results point to the ambiguity that can arise when assessing the Reλ dependence of S and F in wall shear flows. In particular, the multivaluedness of S and F can lead to erroneous conclusions if y/δ is known only poorly, as is the case for the atmospheric shear layer (ASL). If the laboratory turbulent boundary layer is considered an adequate surrogate to the neutral ASL, then the behavior of S and F in the ASL is expected to be similar to that reported here.},
+	number = {6},
+	urldate = {2020-04-16},
+	journal = {Phys. Rev. Fluids},
+	author = {Djenidi, Lyazid and Antonia, Robert A. and Talluru, Murali K. and Abe, Hiroyuki},
+	month = jun,
+	year = {2017},
+	pages = {064608},
+	file = {APS Snapshot:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\ZP9XZFML\\PhysRevFluids.2.html:text/html}
 }
