--- a/references.bib
+++ b/references.bib
@@ -19,7 +19,7 @@
 	author = {Pope, S. B. and Pope, Stephen B.},
 	month = aug,
 	year = {2000},
-	keywords = {Science / Mechanics / Dynamics, Science / Mechanics / Fluids, Science / Mechanics / General, Science / Physics / General, Technology \& Engineering / Engineering (General), Technology \& Engineering / Mechanical}
+	keywords = {Science / Mechanics / Fluids, Science / Mechanics / Dynamics, Technology \& Engineering / Mechanical, Science / Mechanics / General, Science / Physics / General, Technology \& Engineering / Engineering (General)}
 }
 
 @misc{ScipySignalFiltfilt,
@@ -66,4 +66,91 @@
 	year = {2017},
 	pages = {064608},
 	file = {APS Snapshot:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\ZP9XZFML\\PhysRevFluids.2.html:text/html}
+}
+
+@techreport{dinavahiProbabilityDensityFunctions1992,
+	type = {Article; {Article}/{Report}; {Government} publication; {Microform}},
+	title = {Probability density functions in turbulent channel flow},
+	url = {https://trove.nla.gov.au/version/6631509},
+	abstract = {In 1 library. 1 v. Turbulence. Density functionals.},
+	language = {English},
+	urldate = {2020-04-20},
+	institution = {[Washington, DC] : National Aeronautics and Space Administration, Office of Management, Scientific and Technical Information Program ; [Springfield, Va. : National Technical Information Service, distributor]},
+	author = {Dinavahi, Surya P. G and Aeronautics, United States National and Scientific, Space Administration and Program, Technical Information},
+	year = {1992}
+}
+
+@article{vremanStatisticsSpatialDerivatives2014,
+	title = {Statistics of spatial derivatives of velocity and pressure in turbulent channel flow},
+	volume = {26},
+	issn = {1070-6631, 1089-7666},
+	url = {http://aip.scitation.org/doi/10.1063/1.4891624},
+	doi = {10.1063/1.4891624},
+	language = {en},
+	number = {8},
+	urldate = {2020-04-20},
+	journal = {Physics of Fluids},
+	author = {Vreman, A. W. and Kuerten, J. G. M.},
+	month = aug,
+	year = {2014},
+	pages = {085103},
+	file = {Vreman_Kuerten_2014_Statistics of spatial derivatives of velocity and pressure in turbulent channel.pdf:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\Vreman_Kuerten_2014_Statistics of spatial derivatives of velocity and pressure in turbulent channel.pdf:application/pdf}
+}
+
+@article{yangNewTimeScale1993,
+	title = {New time scale based k-epsilon model for near-wall turbulence},
+	volume = {31},
+	issn = {0001-1452, 1533-385X},
+	url = {https://arc.aiaa.org/doi/10.2514/3.11752},
+	doi = {10.2514/3.11752},
+	language = {en},
+	number = {7},
+	urldate = {2020-04-21},
+	journal = {AIAA Journal},
+	author = {Yang, Z. and Shih, T. H.},
+	month = jul,
+	year = {1993},
+	pages = {1191--1198},
+	file = {Version soumise:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\A3A3BYR7\\Yang et Shih - 1993 - New time scale based k-epsilon model for near-wall.pdf:application/pdf}
+}
+
+@book{ComputersGraphicsEditorial,
+	title = {Computers \&amp; {Graphics} {Editorial} {Board}},
+	url = {https://www.journals.elsevier.com/computers-and-graphics/editorial-board},
+	abstract = {Find out more about the editorial board for Computers \&amp; Graphics.},
+	urldate = {2020-04-21},
+	file = {Snapshot:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\YT5ERH3H\\editorial-board.html:text/html}
+}
+
+@article{weaverFlowInducedVibrationsPower2000,
+	title = {Flow-{Induced} {Vibrations} in {Power} and {Process} {Plant} {Components}—{Progress} and {Prospects}},
+	volume = {122},
+	issn = {0094-9930, 1528-8978},
+	url = {https://asmedigitalcollection.asme.org/pressurevesseltech/article/122/3/339/449710/FlowInduced-Vibrations-in-Power-and-Process-Plant},
+	doi = {10.1115/1.556190},
+	abstract = {This paper provides a brief overview of progress in our understanding of flow-induced vibration in power and process plant components. The flow excitation mechanisms considered are turbulence, vorticity shedding, fluidelastic instability, axial flows, and two-phase flows. Numerous references are provided along with suggestions for future research on unresolved issues. [S0094-9930(00)01203-8]},
+	language = {en},
+	number = {3},
+	urldate = {2020-04-21},
+	journal = {Journal of Pressure Vessel Technology},
+	author = {Weaver, D. S. and Ziada, S. and Au-Yang, M. K. and Chen, S. S. and Paı¨doussis, M. P. and Pettigrew, M. J.},
+	month = aug,
+	year = {2000},
+	pages = {339--348}
+}
+
+@article{strahleTurbulenceGeneratedPressureFluctuations1981,
+	title = {Turbulence-{Generated} {Pressure} {Fluctuations} in a {Rocket}-{Like} {Cavity}},
+	volume = {19},
+	issn = {0001-1452, 1533-385X},
+	url = {https://arc.aiaa.org/doi/10.2514/3.50957},
+	doi = {10.2514/3.50957},
+	language = {en},
+	number = {3},
+	urldate = {2020-04-21},
+	journal = {AIAA Journal},
+	author = {Strahle, Warren C. and Neale, Douglas H.},
+	month = mar,
+	year = {1981},
+	pages = {360--365}
 }
