--- a/references.bib
+++ b/references.bib
@@ -154,3 +154,18 @@
 	year = {1981},
 	pages = {360--365}
 }
+
+@article{goushchaEnergyHarvestingProspects2015,
+	title = {Energy harvesting prospects in turbulent boundary layers by using piezoelectric transduction},
+	volume = {54},
+	issn = {08899746},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0889974615000201},
+	doi = {10.1016/j.jfluidstructs.2015.01.015},
+	language = {en},
+	urldate = {2020-04-21},
+	journal = {Journal of Fluids and Structures},
+	author = {Goushcha, O. and Akaydin, H.D. and Elvin, N. and Andreopoulos, Y.},
+	month = apr,
+	year = {2015},
+	pages = {823--847}
+}
