Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -74,8 +74,9 @@ Fundamentals of Turbulent Flows
 
 From an engineering point of view, turbulence is most of the time problematic. Growth of turbulence turn usually to be an excitation for others phenomena, instability at a larger scale that can seriously damage the all structure and put life in danger. In terms of wall-bounded turbulence and more specifically channel flows, many examples are to be found in transport and energy sectors.\\
 
-One of the most thrilling engineering project lie in space race : a giant step has been taken dealing with the challenge of building a spacecraft carrying people with very few computing capabilities compared to today's ones. One of these challenges is to assure the stability of the rocket engine that propel reacting fluids at a tremendous Reynolds number which may induce pressure oscillations and then structural vibrations
+One of the most thrilling engineering project lie in space race : a giant step has been taken dealing with the challenge of building a spacecraft carrying people with very few computing capabilities compared to today's ones. One of these challenges is to assure the stability of the rocket engine that propel reacting fluids at a tremendous Reynolds number which may induce pressure oscillations and then structural vibrations \cite{strahleTurbulenceGeneratedPressureFluctuations1981}. Turbulent-induced vibrations is indeed a worrying problem that faced nuclear engineering too \cite{weaverFlowInducedVibrationsPower2000}. \\
 
+These problematic have justified a big amount of research on channel flows to understand and verifies the theoretic predictions as well as fit some turbulent modeling. 
 
 
 \section{Theoretical Background}
