Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -72,14 +72,17 @@ Fundamentals of Turbulent Flows
 
 \section{Introduction}
 
-From an engineering point of view, turbulence is most of the time problematic. Growth of turbulence turn usually to be an excitation for others phenomena, instability at a larger scale that can seriously damage the all structure and put life in danger. In terms of wall-bounded turbulence and more specifically channel flows, many examples are to be found in transport and energy sectors.\\
+From an engineering point of view, turbulence is most of the time problematic. Growth of turbulence turns usually to be an excitation for others phenomena, instability at a larger scale that can seriously damage the entire structure and put lives in danger. In terms of wall-bounded turbulence and more specifically channel flows, many examples are to be found in transport and energy sectors.\\
 
-One of the most thrilling engineering project lie in space race : a giant step has been taken dealing with the challenge of building a spacecraft carrying people with very few computing capabilities compared to today's ones. One of these challenges is to assure the stability of the rocket engine that propel reacting fluids at a tremendous Reynolds number which may induce pressure oscillations and then structural vibrations \cite{strahleTurbulenceGeneratedPressureFluctuations1981}. Turbulent-induced vibrations is indeed a worrying problem that faced nuclear engineering too \cite{weaverFlowInducedVibrationsPower2000}. \\
+One of the most thrilling engineering project lie in space race : a giant step has been taken dealing with the huge task of building a spacecraft carrying people with very few computing capabilities compared to today's ones. One of these challenges is to assure the stability of the rocket engine that propel reacting fluids at a tremendous Reynolds number that may induce pressure oscillations and then structural vibrations \cite{strahleTurbulenceGeneratedPressureFluctuations1981}. Turbulent-induced vibrations is indeed a worrying problem that faced nuclear engineering too \cite{weaverFlowInducedVibrationsPower2000}. \\
 
-These problematic have justified a big amount of research on channel flows to understand and verifies the theoretic predictions as well as fit some turbulent modeling. 
+These problematic have justified a big amount of research on channel flows to understand and verifies the theoretic predictions like we modestly do in this lab report, as well as fit some turbulent models. Today research is still conducted on turbulent wall-bounded flows but with some positive insights on turbulence : energy harvesting fro instance \cite{goushchaEnergyHarvestingProspects2015}.\\
 
 
 \section{Theoretical Background}
+
+
+
 
 \section{Experimental equipment and procedure}
 
